# reasoning-evals

./: .gitignore  README.md  install_all_requirements.py  setup_recursive.py
MMLU-Pro/: evaluate_from_local.py
MMLU-Pro/eval_results/: eval_record_collection.csv
MMLU-Pro/eval_results/models--meta-llama--Llama-3.1-8B-Instruct/CoT/all/: biology.json  business.json  chemistry.json  computer science.json  economics.json  engineering.json  health.json  history.json  law.json  math.json  other.json  philosophy.json
MMLU-Pro/eval_results/models--meta-llama--Llama-3.1-8B-Instruct/CoT/physics/: physics.json
MMLU-Pro/eval_results/summary/: models--meta-llama--Llama-3.1-8B-Instruct-CoT-all_01-10_08-57_summary.txt  models--meta-llama--Llama-3.1-8B-Instruct-CoT-physics_01-10_09-46_summary.txt
MMLU-Pro/scripts/examples/: eval_llama_2_7b.sh
Qwen2.5-Math/evaluation/: README.md  parser.py
Qwen2.5-Math/evaluation/outputs/workspace/HuggingFace-Download-Accelerator/llama/models--meta-llama--Llama-3.1-8B-Instruct/math_eval/aime24/: test_qwen25-math-cot_-1_seed0_t0.0_s0_e-1.jsonl
Qwen2.5-Math/evaluation/outputs/workspace/HuggingFace-Download-Accelerator/llama/models--meta-llama--Llama-3.1-8B-Instruct/math_eval/amc23/: test_qwen25-math-cot_-1_seed0_t0.0_s0_e-1.jsonl
Qwen2.5-Math/evaluation/sh/: eval.sh
arc_agi/: .example_env  .gitignore  Dockerfile  README.md  few-shot-prompting-for-arc24.ipynb  params.json  pyproject.toml  requirements.txt  run.py  submission.json  writeup.md
arc_agi/playpen/azure/: test_api.py
arc_agi/playpen/cot/: main.py  prompts.py  render.py
arc_agi/playpen/gcp/: api_test.py
arc_agi/playpen/test_answers/: first.py
arc_agi/src/: __init__.py  app.py  data.py  db.py  logic.py  main.py  models.py  no_python.py  plot.py  render_legacy.py  reps.py  run_python.py
arc_agi/src/llms/: __init__.py
arc_agi/src/prompts/: colors.py  examples.py  prompts.py
arc_agi/src/trees/: __init__.py  big.py  experiments.py  medium.py  prod.py  small.py
arc_agi/test_data/: eval_solutions.json  solutions.json  solutions_old.json  train_challenges.json
human-eval/human_eval/: execution.py
simple-evals/: drop_eval.py  gpqa_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py  run.sh  sc.py  simple_evals.py  simpleqa_eval.py
simple-evals/sampler/: chat_completion_sampler.py
(+2 files in other folders)
